# partout

./: Cargo.toml  README.md  build.rs  partout.desktop
assets/fonts/: partout-icons.css  partout-icons.html  partout-icons.json  partout-icons.ts
partout/: Cargo.toml
partout/src/: app.rs  icons.rs  main.rs  pass.rs  sidebar.rs
partout/src/screen/: dashboard.rs  settings.rs
partout/src/screen/dashboard/: password_details.rs  password_list.rs
passepartout/: Cargo.toml  README.md
passepartout/src/: events.rs  lib.rs  password_store.rs  utils.rs
src/: app.rs  icon.rs  icons.rs  main.rs  pass.rs  screen.rs  sidebar.rs  theme.rs
src/screen/: dashboard.rs
src/screen/dashboard/: password_details.rs  password_list.rs
