[package]
name = "partout"
description = "A desktop app for pass"
version = "0.1.2"
edition = "2021"
authors = ["Karl Felix Schewe"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/kardwen/partout"
keywords = ["password-manager", "pass"]
categories = ["authentication"]

[dependencies]
anyhow = "1.0.93"
iced = { version = "0.13.1", features = ["advanced", "debug", "image"] }
passepartout = "0.1.4"
verglas = { version = "0.1.0", features = ["index"] }

[build-dependencies]
verglas = { version = "0.1.0", features = ["forge"] }

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
lto = "thin"
opt-level = 3
debug = 1
strip = false
panic = "abort"
