[package]
name = "passepartout"
version = "0.1.2"
edition = "2021"
description = "Library for pass"
authors = ["Karl Felix Schewe"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/kardwen/partout"
keywords = ["pass"]
categories = ["authentication"]

[dependencies]
arboard = { version = "3.4.1", features = ["wayland-data-control"] }
dirs = "5.0.1"
icu = "1.5.0"
thiserror = "2.0.4"

[dev-dependencies]
clippy = "0.0.302"
